Add Darwin module, set cloneSwarm and ascendantSwarm
